fix: rename selectors via BAM in html&css according to rule 2.1(&3.3) in html-and-css-extended.md and overlaps rule 3.3 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@
   align-items: center;
 }
 
-.task-list__item > * {
+.task-list__item {
   vertical-align: middle;
 }
 
